// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndexChange /> should render 1`] = `
<Change__NameDescription>
  <strong>
    bar
  </strong>
  foo
</Change__NameDescription>
`;

exports[`<IndexChange /> should render when [otuName=null] 1`] = `
<Change__NameDescription>
  <strong />
  foo
</Change__NameDescription>
`;
